tests/specs/ecosystem/std/archive/0_206_0.test
std/archive/0.206.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.206.0": "jsr:@std/internal@0.206.0"
    },
    "jsr": {
      "@std/internal@0.206.0": {
        "integrity": "88d08d5abb4c09fdb58b9a195bcd3fe3499af72287cde1e00debe4a6a7d00cdc"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

